--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <title>Biography of Great Steve</title>
         <link rel="stylesheet" href="./styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Patrick+Hand&display=swap" rel="stylesheet">    </head>
+        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lato&family=Patrick+Hand&display=swap" rel="stylesheet">
+        </head>
     <body>
         <header></header>
         <div id="quote-main">
@@ -12,7 +13,7 @@
         </div>
         <div id="container">
             <div id="main-content">
-                <div id="header-date">
+                <div id="header-main">
                     TIMELINE
                 </div>
                 <div id="date-section">
@@ -115,6 +116,55 @@
                 </div>
             </div>
             <div id="side-content">
+                <div id="header-side">
+                    IN A NUTSHELL
+                </div>
+                <div id="photo-side"></div>
+                <table>
+                    <tr>
+                        <td class="left-table">Born</td>
+                        <td class="right-table">Steven Paul Jobs<br>
+                            February 24, 1955<br>
+                            San Francisco, California, U.S.<br>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="left-table">Died</td>
+                        <td class="right-table">October 5, 2011 (aged 56)<br>
+                            Palo Alto, California, U.S.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="left-table">Occupation</td>
+                        <td class="right-table">Co-founder, Chairman, and CEO of Apple Inc.<br>
+                            Primary investor and CEO of Pixar<br>
+                            Founder and CEO of NeXT
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="left-table">Parents</td>
+                        <td class="right-table">Paul Jobs (adoptive father)<br>
+                            Clara Jobs (adoptive mother)<br>
+                            Abdulfattah Jandali (biological father)<br>
+                            Joanne Schieble Simpson (biological mother)<br>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="left-table">Children</td>
+                        <td class="right-table">with Brennan;<br>
+                            Lisa Brennan (b. 1978)<br>
+                            with Powell;<br>
+                            Reed Jobs (b. 1991)<br>
+                            Erin Jobs (b. 1995)<br>
+                            Eve Jobs (b. 1998)<br>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="left-table">Cause of death</td>
+                        <td class="right-table">Pancreatic cancer and respiratory arrest
+                        </td>
+                    </tr>
+                </table>
         
             </div>
         </div>
