third commit: added footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Biography of Great Steve</title>
         <link rel="stylesheet" href="./styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lato&family=Patrick+Hand&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lato&family=Patrick+Hand&family=Permanent+Marker&display=swap" rel="stylesheet">
         </head>
     <body>
         <header></header>
@@ -168,5 +168,11 @@
         
             </div>
         </div>
+        <footer>
+            "Have the courage to follow your heart and intuition. They somehow know what you truly want to become."<br>
+-STEVE JOBS<br><br>
+
+Do read more about this impeccable personality <a href="https://en.wikipedia.org/wiki/Steve_Jobs">here</a>.
+        </footer>
     </body>
 </html>
